<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_baseline_camera_alt_24"
            android:title="@string/lbl_import"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_photo_24"
            android:title="@string/lbl_gallery"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_camera_alt_24"
            android:title="@string/lbl_slideshow"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_baseline_graphic_eq_24"
            android:title="@string/lbl_tools"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_folder_shared_24"
                android:title="@string/lbl_share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_baseline_send_24"
                android:title="@string/lbl_send"/>
        </menu>
    </item>
</menu>